apollo-router/src/plugins/progressive_override/snapshots/apollo_router__plugins__progressive_override__tests__overridden_field_yields_expected_query_plan.snap
---
source: apollo-router/src/plugins/progressive_override/tests.rs
expression: query_plan
---
{
  "data": {
    "percent100": null
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "kind": "Fetch",
              "serviceName": "Subgraph1",
              "variableUsages": [],
              "operation": "{percent100{__typename id}}",
              "operationName": null,
              "operationKind": "query",
              "id": null,
              "inputRewrites": null,
              "outputRewrites": null,
              "schemaAwareHash": "3560295fe31a2e33da9dba4d775a6fd64727cb953cf790575bc83c27a486f8d2",
              "authorization": {
                "is_authenticated": false,
                "scopes": [],
                "policies": []
              },
              "protocol": "graphQL"
            },
            {
              "kind": "Flatten",
              "path": [
                "percent100"
              ],
              "node": {
                "kind": "Fetch",
                "serviceName": "Subgraph2",
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "typeCondition": "T",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ]
                  }
                ],
                "variableUsages": [],
                "operation": "query($representations:[_Any!]!){_entities(representations:$representations){...on T{foo}}}",
                "operationName": null,
                "operationKind": "query",
                "id": null,
                "inputRewrites": null,
                "outputRewrites": null,
                "schemaAwareHash": "0eb7c697f1b6125db1db0b099e0707e3a2984e4efb4aaee1d3bde8430b34bc6f",
                "authorization": {
                  "is_authenticated": false,
                  "scopes": [],
                  "policies": []
                },
                "protocol": "graphQL"
              }
            }
          ],
          "connector": null
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        percent100 {\n          __typename\n          id\n        }\n      }\n    },\n    Flatten(path: \"percent100\") {\n      Fetch(service: \"Subgraph2\") {\n        {\n          ... on T {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on T {\n            foo\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
